sticky nav jump fixed

--- a/css/style.css
+++ b/css/style.css
@@ -395,9 +395,9 @@ a{
 
 #navigation {
 	background: rgba(0,0,0,0.8);
-	
 	z-index: 50;
 	padding: 25px 10px;
+	width: 100%;
 }
 
 #navigation a{
@@ -417,6 +417,7 @@ a{
 	position:  fixed;
 	top: 0;
 }
+
 
 
 
